# ShoeEngine

./: .gitignore  .windsurfrules  CMakeLists.txt  LICENSE  README.md  build.bat  build_output.txt  project_dump.txt  project_structure.txt  release.bat  test.bat  test_output.txt
cmake/: CPM.cmake
data/: .gitignore  autosave.json  data.json  sample.json
docs/: AIContributorGuide.md  API.md  DeveloperGuidelines.md  DumpExplaination.md  GeneralCascadeGuidelines.md  ThirdPartyDependencies.md
src/: main.cpp
src/Input/: Input.cpp  Input.h  InputManager.cpp  InputManager.h  KeyboardInput.cpp  MouseAxisInput.cpp  MouseButtonInput.cpp
src/bayou/: BayouState.cpp  BayouState.h  BayouStateManager.cpp  BayouStateManager.h  BayouStateVisualizer.cpp  BayouStateVisualizer.h  BoardRenderer.cpp  BoardRenderer.h  Piece.h
src/core/: BaseManager.h  DataManager.cpp  DataManager.h  GameAction.h  GameState.h  Hash.h
src/graphics/: Image.cpp  Image.h  ImageManager.cpp  ImageManager.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
tests/Input/: InputTests.cpp
tests/core/: DataManagerTests.cpp  HashTests.cpp
tests/graphics/: CreateTestImage.cpp  ImageManagerTests.cpp  ImageTests.cpp  SpriteManagerTests.cpp  SpriteTests.cpp  WindowManagerTests.cpp  WindowTests.cpp
